17-ingress-in-kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: backend
spec:
 replicas: 2
 selector:
  matchLabels:
   app: backend
 template:
  metadata:
   labels:
    app: backend
  spec:
   containers:
    - name: backend
      image: nginx:latest
      ports:
       - containerPort: 80
