17-ingress-in-kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: frontend
spec:
 replicas: 2
 selector:
  matchLabels:
   app: frontend
 template:
  metadata:
   labels:
    app: frontend
  spec:
   containers:
    - name: frontend
      image: nginx:latest
      ports:
       - containerPort: 80
