17-ingress-in-kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
 name: frontend-service
spec:
 selector:
  app: frontend
 ports:
  - port: 80
    targetPort: 80
