17-ingress-in-kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: application-ingress
spec:
 ingressClassName: nginx
 rules:
  - host: shubhamgour.com
    http:
     paths:
      - path: /
        pathType: Prefix
        backend:
         service:
          name: frontend-service
          port:
           number: 80
  - host: api.shubhamgour.com
    http:
     paths:
      - path: /
        pathType: Prefix
        backend:
         service:
          name: backend-service
          port:
           number: 80
